<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->
    <RelativeLayout
        android:id="@+id/Activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:padding="10dp">

        <TextView
            android:id="@+id/textGroupMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monitorOftheGroup"
            style="@style/cardTitleStyle"/>


        <EditText
            android:id="@+id/editMonitorId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textGroupMonitor"
            android:layout_marginTop="40dp"
            android:hint="@string/input_name_monitor"/>

        <Button
            android:id="@+id/saveMonitor"
            android:onClick="saveMonitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editMonitorId"
            android:backgroundTint="@color/teal_700"
            android:drawableLeft="@drawable/ic_save"
            android:drawablePadding="10dp"
            android:text="Зберегти" />



        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/saveMonitor"
            android:layout_marginTop="20dp"
            android:onClick="expand1"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">
            <LinearLayout
                android:id="@+id/layoutIntoCardview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/cardTitleStyle"
                        android:text="Список викладачів групи" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layoutToExpand1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <ImageView
                        android:id="@+id/empty"
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.1"
                        app:srcCompat="@drawable/empty"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibility="gone"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/emptyText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="Немає даних"
                        android:textSize="20sp"
                        android:alpha="0.4"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/empty_imageview"
                        android:gravity="center"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nextStep"/>
                    <Button
                        android:id="@+id/deleteAllUsers"
                        android:layout_marginTop="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="deleteAllUsers"
                        android:drawableLeft="@drawable/ic_baseline_delete_forever_24"
                        android:backgroundTint="@color/white"
                        android:visibility="gone"/>
                </LinearLayout>
            </LinearLayout>
            <ImageView
                style="@style/cardArrowImageStyle"
                android:layout_margin="0dp" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textAttendance"
            style="@style/cardTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_below="@+id/card1"
            android:text="@string/choose_epsents" />

        <ToggleButton
            android:id="@+id/checkAllButton"
            style="@style/CustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textAttendance"
            android:checked="true"
            android:textOff="@string/second_activity_chooseNoOne"
            android:textOn="@string/second_activity_chooseAll" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkAllButton"
            android:layout_marginTop="20dp"
            android:onClick="expand"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/layoutIntoCardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/cardTitleStyle"
                            android:text="Список студентів" />

                    </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutToExpand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                <CheckBox
                    android:id="@+id/checkbox0"
                    android:layout_below = "@+id/layoutToExpand"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />

                <CheckBox
                    android:id="@+id/checkbox1"
                    android:layout_below = "@+id/checkbox0"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox2"
                    android:layout_below = "@+id/checkbox1"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox3"
                    android:layout_below = "@+id/checkbox2"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox4"
                    android:layout_below = "@+id/checkbox3"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox5"
                    android:layout_below = "@+id/checkbox4"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox6"
                    android:layout_below = "@+id/checkbox5"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox7"
                    android:layout_below = "@+id/checkbox6"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox8"
                    android:layout_below = "@+id/checkbox7"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox9"
                    android:layout_below = "@+id/checkbox8"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox10"
                    android:layout_below = "@+id/checkbox9"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox11"
                    android:layout_below = "@+id/checkbox10"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox12"
                    android:layout_below = "@+id/checkbox11"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox13"
                    android:layout_below = "@+id/checkbox12"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox14"
                    android:layout_below = "@+id/checkbox13"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox15"
                    android:layout_below = "@+id/checkbox14"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox16"
                    android:layout_below = "@+id/checkbox15"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                <CheckBox
                    android:id="@+id/checkbox17"
                    android:layout_below = "@+id/checkbox16"
                    android:layout_marginTop="30dp"
                    style="@style/CustomStyle" />
                </LinearLayout>

            </LinearLayout>
            <ImageView
                style="@style/cardArrowImageStyle"
                android:layout_margin="0dp" />

        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/nextStep"
            android:onClick="startNewActivity"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            android:backgroundTint="@color/teal_700"/>

    </RelativeLayout>


</ScrollView>